fix: remove hb-stretch-vertical-linked-cards additions from shs-4652

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_vertical-linked-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_vertical-linked-card.scss
@@ -21,19 +21,6 @@
     background-color: transparent;
   }
 
-  .hb-stretch-vertical-linked-cards & {
-    @include hb-themes(('colorful', 'airy')) {
-      $hb-bg--fallback: hb-get-pairing-color('primary-dark', $hb-colorful-default, $hc-colorful-pairings);
-      $hb-bg--pairing: var(--palette--primary-dark);
-
-      @include hb-vertical-card-background-block(transparent, $hb-bg--fallback, $hb-bg--pairing);
-    }
-
-    @include hb-traditional {
-      @include hb-pairing-color('background-color', 'primary');
-    }
-  }
-
   &__img {
     overflow: hidden;
 
